edited virutal thread test